# rs-xsheet2jsonl

./: Cargo.toml  README.md  build.sh  check.sh  clippy.sh  doc.sh  example.sh  geninput.py  opt.sh  rs-xsheet2jsonl.wasm  wasi.sh  watch.sh
sample.d/: input.xlsx
src/: lib.rs  main.rs
