[package]
name = "rs-xsheet2jsonl"
version = "0.1.0"
edition = "2024"

exclude = [
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
    "help",
    "usage",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
  "std",
]

[dependencies.calamine]
version = "0.34"
default-features = false
features = [
  "dates",
]

[dependencies.chrono]
version = "0.4"
default-features = false
features = [
    "std",
]
